# InkedIn

./: .gitignore  CONTRIBUTING.md  README.md  Research.MD  pyproject.toml
.githooks/: commit-msg
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deps-health.yml
models/manifests/: NOTICE.md  manga-colorization-v2.json
python/inkedin_core/: __init__.py  cli.py  jobs.py  server.py  workspace.py
python/inkedin_core/models/: bubbles.py  device.py  diffusion.py  gan.py  registry.py  tagger.py  translator.py  v2_nets.py
python/inkedin_core/pipeline/: colorize.py  colorstats.py  export.py  ingest.py  panels.py  recomposite.py  textlayer.py  validate.py
python/inkedin_core/security/: archives.py  limits.py
python/inkedin_core/tests/: conftest.py  test_pipeline.py  test_security.py
