[project]
name = "inkedin-core"
version = "0.1.0"
description = "InkedIn - local manga/comic colorization engine"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pillow>=11.0",
    "pymupdf>=1.25",
    "opencv-python-headless>=4.10",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.20",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28"]

[project.scripts]
inkedin = "inkedin_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/inkedin_core"]

[tool.pytest.ini_options]
testpaths = ["python/inkedin_core/tests"]
